# CloudClaim

./: .gitignore  AGENTS.md  README.md  pyproject.toml
cloudclaim/: __init__.py  cli.py
cloudclaim/clouds/: __init__.py
cloudclaim/clouds/aws/: __init__.py  availability.py  claims.py  client.py  commands.py  inputs.py  models.py  output.py  services.py
cloudclaim/clouds/azure/: __init__.py  availability.py  catalog.py  claims.py  client.py  commands.py  inputs.py  models.py  output.py  prerequisites.py  services.py
cloudclaim/core/: __init__.py  credentials.py  output.py  providers.py  targets.py
docs/: ADDING_SERVICES.md  ARCHITECTURE.md  USAGE.md
tests/: test_aws_cloudclaim.py  test_cloudclaim.py
