[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudclaim"
version = "0.1.0"
description = "Cloud dangling-hostname claimability validator"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "b1bek" }]
keywords = ["cloud", "dns", "dangling-dns", "takeover", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = []

[project.scripts]
cloudclaim = "cloudclaim.cli:main"

[tool.setuptools.packages.find]
include = ["cloudclaim*"]

[tool.uv]
package = true
